# oab-bench

./: README.md  common.py  conversation.py  gen_api_answer.py  gen_judgment.py  pyproject.toml  show_result.py
data/: judge_prompts.jsonl
data/oab_bench/: question.jsonl
data/oab_bench/model_answer/: Qwen2.5-72B-Instruct-deepinfra.jsonl  claude-3-5-sonnet-20240620.jsonl  gpt-4o-2024-08-06.jsonl  o3-2025-04-16.jsonl  sabia-3-2024-12-11.jsonl  sabia-3.1-2025-05-08.jsonl
data/oab_bench/model_judgment/: o3-2025-04-16_single.jsonl
data/oab_bench/reference_answer/: guidelines.jsonl
