[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oab-bench"
version = "0.1.0"
description = "A benchmark for legal writing evaluation of questions from Brazilian Bar Examination."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp", "fastapi", "httpx", "markdown2[all]", "nh3", "numpy",
    "prompt_toolkit>=3.0.0", "pydantic<3,>=2.0.0", "pydantic-settings", "psutil", "requests", "rich>=10.0.0",
    "shortuuid", "tiktoken", "uvicorn", "openai<1", "ray"
]

[project.urls]
"Homepage" = "https://github.com/maritaca-ai/oab-bench"
"Bug Tracker" = "https://github.com/maritaca-ai/oab-bench/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
